--- a/WeaveAdmin/src/AdminConsole.mxml
+++ b/WeaveAdmin/src/AdminConsole.mxml
@@ -35,8 +35,11 @@
 					<mx:Button label="Import SQL data..." click="WizardPanel.createWizard(this, new SQLImportWizard())" toolTip="{Strings.tip_import_sql_data}"/>
 					<mx:Button label="Import CSV data..." click="WizardPanel.createWizard(this, new CSVImportWizard())" toolTip="{Strings.tip_import_csv_data}"/>
 					<mx:Button label="Import SHP and DBF data..." click="WizardPanel.createWizard(this, new SHPImportWizard())" toolTip="{Strings.tip_import_shp_and_dbf}"/>
+
 					<ui:CustomVRule/>
+					<mx:Button label="Open Last Session" click="AdminInterface.instance.openWeavePopup(true);" toolTip="This will open Weave with your last configuration."/>
 					<mx:Button label="Open Weave" click="AdminInterface.instance.openWeavePopup();" toolTip="This will open Weave in a new browser window which allows you to save a new client configuration."/>
+
 					<mx:Spacer width="100%"/>
 					<mx:Label text="{'Active Connection Name: ' + AdminInterface.instance.activeConnectionName}" textAlign="right"/>
 					<mx:Button label="Sign out" enabled="{AdminInterface.instance.sqlConfigExists == true}"
