--- a/WeaveUI/src/weave/editors/WeavePropertiesAppearanceEditor.mxml
+++ b/WeaveUI/src/weave/editors/WeavePropertiesAppearanceEditor.mxml
@@ -54,6 +54,9 @@
 		<ui:Indent label="Window grid snapping:">
 			<ui:TextInputWithPrompt prompt="pixel or percent" width="100" creationComplete="linkBindableProperty(Weave.properties.windowSnapGridSize, event.target, 'text', 500);"/>
 		</ui:Indent>
+		<ui:Indent label="Control Panel Scale:">
+			<ui:TextInputWithPrompt prompt="" width="100" creationComplete="linkBindableProperty(Weave.properties.controlPanelScale, event.target, 'text', 500);"/>
+		</ui:Indent>
 		<ui:Indent label="Fixed workspace size:">
 			<ui:TextInputWithPrompt prompt="width" width="64" creationComplete="linkBindableProperty(Weave.properties.workspaceWidth, event.target, 'text', 500);"/>
 			<ui:TextInputWithPrompt prompt="height" width="64" creationComplete="linkBindableProperty(Weave.properties.workspaceHeight, event.target, 'text', 500);"/>
