--- a/WeaveUI/src/weave/ui/ConnectionComponent.mxml
+++ b/WeaveUI/src/weave/ui/ConnectionComponent.mxml
@@ -43,6 +43,7 @@ ConnectionComponent
 	<![CDATA[
 		import mx.core.Application;
 		import mx.core.DragSource;
+		import mx.core.FlexGlobals;
 		import mx.core.IUIComponent;
 		import mx.events.DragEvent;
 		import mx.managers.DragManager;
@@ -123,7 +124,7 @@ ConnectionComponent
 			var ccArray:Array = event.dragSource.dataForFormat("cc") as Array;
 			// HACK: Assume Application has this function.
 			// TODO: Stop relying on any particular Application implementation.
-			Application.application.drawConnection(ccArray[0],this);
+			FlexGlobals.topLevelApplication.drawConnection(ccArray[0],this);
 //			this.removeEventListener(MouseEvent.ROLL_OUT,handleMouseOut);
 //			(ccArray[0] as ConnectionComponent).removeEventListener(MouseEvent.ROLL_OUT,handleMouseOut);
 		}
@@ -170,7 +171,7 @@ ConnectionComponent
 		{
 			// HACK: Assume Application has this function.
 			// TODO: Stop relying on any particular Application implementation.
-			Application.application.drawConnection(this);
+			FlexGlobals.topLevelApplication.drawConnection(this);
 		}
 		
 		private function addConnection(cc:ConnectionComponent):void
@@ -200,14 +201,14 @@ ConnectionComponent
 		{
 			// HACK: Assume Application has this function.
 			// TODO: Stop relying on any particular Application implementation.
-//			Application.application.drawConnections(this,getConnectedComponents());
+//			FlexGlobals.topLevelApplication.drawConnections(this,getConnectedComponents());
 		}
 		
 		private function handleMouseOut(event:MouseEvent):void
 		{
 			// HACK: Assume Application has this function.
 			// TODO: Stop relying on any particular Application implementation.
-//			Application.application.removeConnections();
+//			FlexGlobals.topLevelApplication.removeConnections();
 		}
 		
 		private function toggleToolTip():void
