--- a/WeaveUI/src/weave/editors/SessionHistorySlider.mxml
+++ b/WeaveUI/src/weave/editors/SessionHistorySlider.mxml
@@ -48,6 +48,7 @@
 	<mx:Script>
 		<![CDATA[
 			import mx.core.Application;
+			import mx.core.FlexGlobals;
 			import mx.managers.PopUpManager;
 			
 			import weave.Weave;
@@ -130,7 +131,7 @@
 					_weaveFileRef.addEventListener(Event.SELECT,   function (e:Event):void { _weaveFileRef.load(); } );
 					_weaveFileRef.addEventListener(Event.COMPLETE, function (e:Event):void {
 						// TEMPORARY SOLUTION
-						Application.application.visApp.loadSessionState(e.target.data, _weaveFileRef.name);
+						FlexGlobals.topLevelApplication.visApp.loadSessionState(e.target.data, _weaveFileRef.name);
 					} );
 				}
 				_weaveFileRef.browse([
