--- a/WeaveUI/src/weave/editors/managers/AddDataSourcePanel.mxml
+++ b/WeaveUI/src/weave/editors/managers/AddDataSourcePanel.mxml
@@ -55,6 +55,7 @@
 		<![CDATA[
 			import mx.controls.Alert;
 			import mx.core.Application;
+			import mx.core.FlexGlobals;
 			import mx.events.ItemClickEvent;
 			import mx.managers.PopUpManager;
 			
@@ -77,7 +78,7 @@
 			private static var _staticInstance:AddDataSourcePanel = null;
 			public static function showAsPopup():void
 			{
-				_staticInstance = PopUpManager.createPopUp(Application.application as DisplayObject, AddDataSourcePanel, false) as AddDataSourcePanel;
+				_staticInstance = PopUpManager.createPopUp(FlexGlobals.topLevelApplication as DisplayObject, AddDataSourcePanel, false) as AddDataSourcePanel;
 				
 				PopUpManager.centerPopUp(_staticInstance);
 			}
