--- a/WeaveUI/src/weave/ui/collaboration/CollaborationMenuBar.mxml
+++ b/WeaveUI/src/weave/ui/collaboration/CollaborationMenuBar.mxml
@@ -38,6 +38,7 @@
 		<![CDATA[
 			import mx.controls.Alert;
 			import mx.core.Application;
+			import mx.core.FlexGlobals;
 			import mx.core.IFlexDisplayObject;
 			import mx.events.CloseEvent;
 			import mx.events.FlexEvent;
@@ -197,7 +198,7 @@
 			}
 			private function createWindowSettings():void
 			{
-				SETTINGS = PopUpManager.createPopUp(Application.application as Application, CollaborationSettingsWindow) as CollaborationSettingsWindow;
+				SETTINGS = PopUpManager.createPopUp(FlexGlobals.topLevelApplication as Application, CollaborationSettingsWindow) as CollaborationSettingsWindow;
 				SETTINGS.hide();
 				var p:Point = new Point(button_settings.x + button_settings.width/2, button_settings.y);
 				SETTINGS.x = localToGlobal(p).x - SETTINGS.width/2;
@@ -205,7 +206,7 @@
 			}
 			private function createWindowChat():void
 			{
-				CHAT = PopUpManager.createPopUp(Application.application as Application, CollaborationChatWindow) as CollaborationChatWindow;
+				CHAT = PopUpManager.createPopUp(FlexGlobals.topLevelApplication as Application, CollaborationChatWindow) as CollaborationChatWindow;
 				CHAT.visible = false;
 				var p:Point = new Point(button_chat.x, button_chat.y);
 				CHAT.xFrom = localToGlobal(p).x;
@@ -544,7 +545,7 @@
 				}
 				else // You are already in the room and someone joins
 				{
-					userMice[e.getText()] = CollabMouseCursor.addPopUp(Application.application as Application) as CollabMouseCursor;
+					userMice[e.getText()] = CollabMouseCursor.addPopUp(FlexGlobals.topLevelApplication as Application) as CollabMouseCursor;
 				}
 			}
 			private function handleRemoveUserElements(e:CollaborationEvent):void
@@ -573,7 +574,7 @@
 				if( userMice == null )
 					joinedRoomCreateMouseList();
 				if( userMice[e.getText()] == null )
-					userMice[e.getText()] = CollabMouseCursor.addPopUp(Application.application as Application) as CollabMouseCursor;
+					userMice[e.getText()] = CollabMouseCursor.addPopUp(FlexGlobals.topLevelApplication as Application) as CollabMouseCursor;
 				
 				userMice[e.getText()].setPos(percentToCoordX(e.getX()), percentToCoordY(e.getY()));
 				
@@ -602,12 +603,12 @@
 				}
 				userMice = null;
 			}
-			private function coordToPercentX(x:Number):Number { return x / Application.application.stage.stageWidth;   }
-			private function percentToCoordX(x:Number):Number { return x * Application.application.stage.stageWidth;   }
-			private function coordToPercentY(y:Number):Number { return y / Application.application.stage.stageHeight;  }
-			private function percentToCoordY(y:Number):Number { return y * Application.application.stage.stageHeight;  }
-			private function xMousePercent():Number { return Application.application.stage.mouseX / Application.application.stage.stageWidth;  }
-			private function yMousePercent():Number { return Application.application.stage.mouseY / Application.application.stage.stageHeight; }
+			private function coordToPercentX(x:Number):Number { return x / FlexGlobals.topLevelApplication.stage.stageWidth;   }
+			private function percentToCoordX(x:Number):Number { return x * FlexGlobals.topLevelApplication.stage.stageWidth;   }
+			private function coordToPercentY(y:Number):Number { return y / FlexGlobals.topLevelApplication.stage.stageHeight;  }
+			private function percentToCoordY(y:Number):Number { return y * FlexGlobals.topLevelApplication.stage.stageHeight;  }
+			private function xMousePercent():Number { return FlexGlobals.topLevelApplication.stage.mouseX / FlexGlobals.topLevelApplication.stage.stageWidth;  }
+			private function yMousePercent():Number { return FlexGlobals.topLevelApplication.stage.mouseY / FlexGlobals.topLevelApplication.stage.stageHeight; }
 
 		]]>
 	</mx:Script>
