--- a/WeaveAdmin/src/weave/ui/admin/wizards/SHPImportWizard.mxml
+++ b/WeaveAdmin/src/weave/ui/admin/wizards/SHPImportWizard.mxml
@@ -20,14 +20,18 @@
 */
 -->
 <admin:WizardViewStack
-			xmlns:mx="http://www.adobe.com/2006/mxml"
+			xmlns:fx="http://ns.adobe.com/mxml/2009"
+			xmlns:mx="library://ns.adobe.com/flex/mx"
+			xmlns:s="library://ns.adobe.com/flex/spark"
 			xmlns:ui="weave.ui.*"
 			xmlns:admin="weave.ui.admin.*"
 			xmlns="weave.ui.admin.wizards.*" 
 			label="Import shape data"
 			creationComplete="handleCreationComplete()"
 			>
-	<ui:IndentGroup id="indentGroup" />
+	<fx:Declarations>
+		<ui:IndentGroup id="indentGroup" />
+	</fx:Declarations>
 	<mx:VBox width="100%" height="100%">
 		<ui:Indent width="100%" label="Load Shape files" group="{indentGroup}">
 			<mx:TextInput id="shpFileNameInput" enabled="true"/>
@@ -73,7 +77,7 @@
 			<mx:Button id="srsProjectionValidateBtn" label="Validate" click="validateProjectionSRS()"/>
 		</ui:Indent>
 	</mx:VBox>
-	<mx:Script>
+	<fx:Script>
 		<![CDATA[
 			import mx.collections.ArrayCollection;
 			import mx.controls.Alert;
@@ -210,7 +214,7 @@
 				PopUpManager.removePopUp(_serverFileBrowser);
 				enableAllWidgets();
 			}
-			
+
 			override public function finish():void
 			{
 				var alertTitle:String = "Missing parameter";
@@ -345,5 +349,5 @@
 				Alert.show(message, alertTitle);
 			}
 		]]>
-	</mx:Script>
+	</fx:Script>
 </admin:WizardViewStack>
