Upgrading to Flex 4.5.1A

--- a/WeaveUI/src/weave/editors/WeavePropertiesEditor.mxml
+++ b/WeaveUI/src/weave/editors/WeavePropertiesEditor.mxml
@@ -61,6 +61,7 @@
 			import weave.api.WeaveAPI;
 			import weave.utils.EventUtils;
 			import mx.binding.utils.BindingUtils;
+			import mx.core.FlexGlobals;
 			import mx.core.Application;
 			import mx.managers.PopUpManager;
 			
@@ -89,7 +90,7 @@
 					_instance = new WeavePropertiesEditor();
 				
 				if (!_instance.parent)
-					PopUpManager.addPopUp(_instance, Application.application as Application);
+					PopUpManager.addPopUp(_instance, FlexGlobals.topLevelApplication as Application);
 				
 				_instance.restorePanel();
 			}
