--- a/WeaveUI/src/weave/ui/SelectionManager.mxml
+++ b/WeaveUI/src/weave/ui/SelectionManager.mxml
@@ -48,7 +48,7 @@
 	
 	<mx:Script>
 		<![CDATA[
-			import mx.core.Application;
+			import mx.core.FlexGlobals;
 			import mx.managers.PopUpManager;
 			
 			import weave.Weave;
@@ -113,7 +113,7 @@
 				{
 					clickFunction = function():void {
 						// create the SelectionManager as a modal PopUp
-						_popupManager = PopUpManager.createPopUp(Application.application as DisplayObject, SelectionManager, true) as SelectionManager;
+						_popupManager = PopUpManager.createPopUp(FlexGlobals.topLevelApplication as DisplayObject, SelectionManager, true) as SelectionManager;
 						// this will disable dragging of this popup
 						_popupManager.isPopUp = false;
 						PopUpManager.centerPopUp(_popupManager);
